clang/test/BSC/Negative/Trait/r3/trait_in_struct1/trait_in_struct1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int f(This* this);
};

int int::f(int* this) {
  return 1;
}

struct S {
    _Trait F future; // expected-error {{only _Trait pointer type is allowed to be declared}}
};